src/test/deca/syntax/valid/synt/separate_with_comments.deca
/*
    Description : Utilisation de commentaires comme séparateurs

    Résultat : OK
*/
{
    int/*ttt*/a=1;
}
