src/test/deca/syntax/invalid/synt/int_this.deca
/*
    Description : utilisation de this comme identificateur

    Résultat : Erreur syntaxique
*/
{
    int this = 5;
}
